po: update po/nl_NL/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/financial.po
+++ b/po/nl_NL/financial.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 01:58+0000\n"
+"PO-Revision-Date: 2016-05-19 10:06+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,7 @@ msgstr "Aanmaakdatum:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
-msgstr "Laatste wijziging door:"
+msgstr "Laatst gewijzigd door:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
@@ -104,7 +104,7 @@ msgstr "Symbool"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Numeric Code"
-msgstr "Numerieke Code"
+msgstr "Numerieke code"
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Entity Financial Transaction ID"
@@ -116,7 +116,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
-msgstr "Financieel Account ID"
+msgstr "Nummer financieel account"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Name"
@@ -126,12 +126,12 @@ msgstr "Financieel Account Naam"
 #: CRM/Financial/Form/FinancialAccount.php
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Accounting Code"
-msgstr "Rekening code"
+msgstr "Code boekhoudrekening"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Account Type Code"
-msgstr "Rekeningtype Code"
+msgstr "Code rekeningtype"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Description"
@@ -167,7 +167,7 @@ msgstr "Financieel Account is actief"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Default Financial Account"
-msgstr "Standaard Financieel Account"
+msgstr "Standaard financieel account"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
@@ -955,7 +955,7 @@ msgstr "financiële types CiviCRM beheren"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "Administer access to Financial Types"
-msgstr "toegang tot financiële types beheren"
+msgstr "beheren van financiële types"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
