po: update po/nl_NL/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 03:31+0000\n"
+"PO-Revision-Date: 2016-05-19 09:55+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -196,7 +196,7 @@ msgstr "Nieuwe bijdrage"
 
 msgctxt "menu"
 msgid "Contribution Summary - Chart View"
-msgstr "Bijdragensamenvatting - diagramweergave"
+msgstr "Bijdragenoverzicht - diagramweergave"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -594,7 +594,7 @@ msgstr "Adresinstellingen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Date Formats"
-msgstr "Datumformaten"
+msgstr "Datuminstellingen"
 
 msgctxt "menu"
 msgid "Preferred Languages"
@@ -643,7 +643,7 @@ msgstr "Betaalmethode"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mapping and Geocoding"
-msgstr "Landkaarten en geocoding"
+msgstr "Kaarten en geocoding"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -844,7 +844,7 @@ msgstr "Evenementlocatie op de kaart tonen"
 
 msgctxt "menu"
 msgid "Contact Summary"
-msgstr "Contactsamenvatting"
+msgstr "Contactoverzicht"
 
 msgctxt "menu"
 msgid "Delete Contact"
@@ -886,7 +886,7 @@ msgstr "Contactdashboard"
 
 msgctxt "menu"
 msgid "Activity Dashlet"
-msgstr "Dashlet Activiteiten"
+msgstr "Dashlet activiteiten"
 
 msgctxt "menu"
 msgid "CiviCRM Blog"
@@ -898,11 +898,11 @@ msgstr "Aan de slag met CiviCRM"
 
 msgctxt "menu"
 msgid "Case Dashlet"
-msgstr "Dashlet Dossier"
+msgstr "Dashlet dossier"
 
 msgctxt "menu"
 msgid "All Cases Dashlet"
-msgstr "Dashlet Alle dossiers"
+msgstr "Dashlet alle dossiers"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1624,7 +1624,7 @@ msgstr "Systeeminstellingen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Connections"
-msgstr ""
+msgstr "Koppelingen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1769,7 +1769,7 @@ msgstr "Rapporten"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Constituent Summary"
-msgstr "Samenvatting ingezetenen"
+msgstr "Overzicht achterban"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1817,7 +1817,7 @@ msgstr "Geeft informatie over de relatie tussen twee contacten."
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contribution Summary"
-msgstr "Bijdragesamenvatting"
+msgstr "Overzicht bijdragen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1941,7 +1941,7 @@ msgstr "Geeft een overzicht van de donatiegeschiedenis, gegroepeerd op jaar, inc
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Personal Campaign Page Summary"
-msgstr "Samenvatting persoonlijke campagnepagina"
+msgstr "Overzicht persoonlijke campagnepagina's"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1953,7 +1953,7 @@ msgstr "Opgehaald totaalbedrag en aantal gevers van elke persoonlijke campagnepa
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Summary"
-msgstr "Samenvatting toezeggingen"
+msgstr "Overzicht toezeggingen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1992,7 +1992,7 @@ msgstr "Geeft informatie over de status van periodieke betalingen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Membership Summary"
-msgstr "Samenvatting lidmaatschappen"
+msgstr "Overzicht lidmaatschappen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2045,7 +2045,7 @@ msgstr "Geeft een lijst met deelnemers aan een evenement."
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Income Summary"
-msgstr "Samenvatting evenementinkomsten"
+msgstr "Overzicht evenementinkomsten"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2100,22 +2100,22 @@ msgstr "Rapport statistieken toelagen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Bounces"
-msgstr "Niet-bezorgdberichten e-mail"
+msgstr "e-mailbounces"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Bounce Report for mailings"
-msgstr "Rapport niet-bezorgdberichten voor mailings"
+msgstr "Rapport bounces bij mailings"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailing Summary"
-msgstr "Samenvatting mailings"
+msgstr "Overzicht mailings"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Summary statistics for mailings"
-msgstr "Samenvattende statistieken voor mailings"
+msgstr "Statistiekenoverzicht voor mailings"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2163,37 +2163,37 @@ msgstr "Rapport met detailinformatie voor stemmenwerving, belrondes, looprondes 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "Betaalmethoden"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "CKEditor configureren"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "Dubbele contacten batchgewijs samenvoegen"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "CiviCRM-inhoud toevoegen"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
-msgstr ""
+msgstr "Zelfbedieningspagina aanmelding bijwerken"
 
 msgctxt "menu"
 msgid "Self-service Registration Transfer"
-msgstr ""
+msgstr "Zelfbedieningspagina aanmelding overdragen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "Systeemstatus"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Components"
-msgstr ""
+msgstr "Onderdelen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2203,17 +2203,17 @@ msgstr "Extensies"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Details activiteit"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Activiteitenoverzicht"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Toont statistieken van activiteiten per type of datum"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
