--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 03:24+0000\n"
+"PO-Revision-Date: 2016-05-19 09:06+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -191,7 +191,7 @@ msgstr "Tekst donatielink"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "PCP Page Type"
-msgstr "PCP pagina type"
+msgstr "PCP-paginatype"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity Type"
@@ -299,7 +299,7 @@ msgstr "Uw persoonlijke campagnepagina is %1 %2 %3"
 
 #: CRM/PCP/Form/Contribute.php
 msgid "Create your own fundraising page"
-msgstr "Maak uw eigen fondsenwerving pagina"
+msgstr "Maak uw eigen fondsenwervingspagina"
 
 #: CRM/PCP/Form/Contribute.php
 msgid "Enable Personal Campaign Pages? (for this contribution page)"
@@ -507,7 +507,7 @@ msgstr "Als persoonlijke campagnepagina's zijn geactiveerd, zal uw achterban nad
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
-msgstr "E-mail Bevestiging"
+msgstr "E-mailbevestiging"
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid ""
@@ -887,7 +887,7 @@ msgstr "Neem deze link naar uw fondsenwerving pagina op in uw e-mails"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "Managing Your Page"
-msgstr "Beheer van uw pagina"
+msgstr "Uw pagina beheren"
 
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
