--- a/po/es_ES/provinces.po
+++ b/po/es_ES/provinces.po
@@ -12,14 +12,14 @@
 # kaotik <kaotiko@gmail.com>, 2011
 # kaotik <kaotiko@gmail.com>, 2011
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-20 12:49+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2209,7 +2209,7 @@ msgstr "Ceará"
 
 msgctxt "province"
 msgid "Distrito Federal"
-msgstr "Distrito Federal"
+msgstr "Ciudad de México"
 
 msgctxt "province"
 msgid "Espirito Santo"
@@ -8977,7 +8977,7 @@ msgstr "Jalisco"
 
 msgctxt "province"
 msgid "Mexico"
-msgstr "México"
+msgstr "Estado de México"
 
 msgctxt "province"
 msgid "Michoacin"
