po: update po/en_GB/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/en_GB/financial.po
+++ b/po/en_GB/financial.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-20 20:09+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -107,11 +107,11 @@ msgstr "Numeric Code"
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Entity Financial Transaction ID"
-msgstr ""
+msgstr "Entity Financial Transaction ID"
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Financial Transaction Id"
-msgstr ""
+msgstr "Financial Transaction Id"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
@@ -170,39 +170,39 @@ msgstr "Default Financial Account"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
-msgstr ""
+msgstr "Financial Transaction ID"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction From Account"
-msgstr ""
+msgstr "Financial Transaction From Account"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction To Account"
-msgstr ""
+msgstr "Financial Transaction To Account"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Date"
-msgstr ""
+msgstr "Financial Transaction Date"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Total Amount"
-msgstr ""
+msgstr "Financial Total Amount"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Fee Amount"
-msgstr ""
+msgstr "Financial Fee Amount"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Net Amount"
-msgstr ""
+msgstr "Financial Net Amount"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Currency"
-msgstr ""
+msgstr "Financial Currency"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Transaction Result Code"
-msgstr ""
+msgstr "Transaction Result Code"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Status Id"
@@ -384,7 +384,7 @@ msgstr "Task"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "- actions -"
-msgstr ""
+msgstr "- actions -"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -475,7 +475,7 @@ msgstr "Number of Transactions"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Please select a valid contact."
-msgstr ""
+msgstr "Please select a valid contact."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Number of Transactions should a positive number"
@@ -834,11 +834,11 @@ msgstr "Updating"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close this batch?"
-msgstr ""
+msgstr "Are you sure you want to close this batch?"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close and export this batch?"
-msgstr ""
+msgstr "Are you sure you want to close and export this batch?"
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
@@ -938,7 +938,7 @@ msgstr "There are no financial accounts assigned to this financial type. You can
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Method:"
-msgstr ""
+msgstr "Payment Method:"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
@@ -946,76 +946,76 @@ msgid ""
 "            Before making this change you should likely note the existing permissions at Administer > Users and Permissions > Permissions (Access Control),\n"
 "            then clicking the Access Control link for your Content Management System, then noting down the permissions for 'CiviCRM: {financial type name} view', etc.\n"
 "            Then after making the change of name, reset the permissions to the way they were."
-msgstr ""
+msgstr "Changing the name of a Financial Type will result in losing the current permissions associated with that Financial Type.\n            Before making this change you should likely note the existing permissions at Administer > Users and Permissions > Permissions (Access Control),\n            then clicking the Access Control link for your Content Management System, then noting down the permissions for 'CiviCRM: {financial type name} view', etc.\n            Then after making the change of name, reset the permissions to the way they were."
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "administer CiviCRM Financial Types"
-msgstr ""
+msgstr "administer CiviCRM Financial Types"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "Administer access to Financial Types"
-msgstr ""
+msgstr "Administer access to Financial Types"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
-msgstr ""
+msgstr "Currency ID"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Symbol"
-msgstr ""
+msgstr "Currency Symbol"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Numeric Code"
-msgstr ""
+msgstr "Currency Numeric Code"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Full Currency Name"
-msgstr ""
+msgstr "Full Currency Name"
 
 #: CRM/Financial/DAO/EntityFinancialAccount.php
 msgid "Entity Financial Account ID"
-msgstr ""
+msgstr "Entity Financial Account ID"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item ID"
-msgstr ""
+msgstr "Financial Item ID"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Created Date"
-msgstr ""
+msgstr "Financial Item Created Date"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Transaction Date"
-msgstr ""
+msgstr "Financial Item Transaction Date"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Contact ID"
-msgstr ""
+msgstr "Financial Item Contact ID"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Description"
-msgstr ""
+msgstr "Financial Item Description"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Currency"
-msgstr ""
+msgstr "Financial Item Currency"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Status ID"
-msgstr ""
+msgstr "Financial Item Status ID"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Is Payment?"
-msgstr ""
+msgstr "Is Payment?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP class name implementation"
-msgstr ""
+msgstr "Suffix for PHP class name implementation"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid "Financial Account Owner"
-msgstr ""
+msgstr "Financial Account Owner"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid ""
@@ -1024,12 +1024,12 @@ msgid ""
 "account. Generally, they will be from the following list: BANK, AR, OCASSET,"
 " FIXASSET, OASSET, AP, OCLIAB, LTLIAB, EQUITY, INC, COGS, EXP, EXEXP (though"
 " there may be others in your version of QuickBooks)."
-msgstr ""
+msgstr "For export to QuickBooks, export your Chart of Accounts and open in low level text editor. You will be able to see the Account Type Code for each account. Generally, they will be from the following list: BANK, AR, OCASSET, FIXASSET, OASSET, AP, OCLIAB, LTLIAB, EQUITY, INC, COGS, EXP, EXEXP (though there may be others in your version of QuickBooks)."
 
 #: templates/CRM/Financial/Form/PaypalExpress.tpl
 #: templates/CRM/Financial/Form/PaypalPro.tpl
 msgid "Checkout securely. Pay without sharing your financial information."
-msgstr ""
+msgstr "Checkout securely. Pay without sharing your financial information."
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
@@ -1038,16 +1038,16 @@ msgid ""
 "href=\"%3\">premiums</a> are associated with financial accounts so that they"
 " can result in the proper double-entry transactions to export to your "
 "accounting system."
-msgstr ""
+msgstr "Financial accounts correspond to those in your accounting system.  <a href=\"%1\">Financial types</a>, <a href=\"%2\">payment methods</a>, and <a href=\"%3\">premiums</a> are associated with financial accounts so that they can result in the proper double-entry transactions to export to your accounting system."
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
 "If you specify a payment method then this batch will be limited to exporting"
 " only transactions paid with that method."
-msgstr ""
+msgstr "If you specify a payment method then this batch will be limited to exporting only transactions paid with that method."
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
 "Note that not all transactions are necessarily associated with a payment "
 "method."
-msgstr ""
+msgstr "Note that not all transactions are necessarily associated with a payment method."
