--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -15,7 +15,7 @@
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
 # ixiam <info@ixiam.com>, 2011
 # Jon Altuna <jonaltuna@msn.com>, 2015
-# Marti <m.prat@ixiam.com>, 2014,2016
+# Marti Prat <m.prat@ixiam.com>, 2014,2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-20 12:52+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1323,7 +1323,7 @@ msgstr " Tenga en cuenta que el procesador de pago Authorize.net sólo permite c
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Contribute/Form/ContributionPage.php
 msgid "civicrm_contribution_page"
-msgstr "civicrm_pàgina_de_contribución"
+msgstr "civicrm_pagina_de_contribución"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Contribute/Form/ContributionPage/TabHeader.php
@@ -1704,7 +1704,7 @@ msgstr "Se ha guardado correctamente el obsequio '%1'."
 
 #: CRM/Contribute/Form/Search.php
 msgid "Find Contributions"
-msgstr "Buscar Contribuciones"
+msgstr "Buscar contribuciones"
 
 #: CRM/Contribute/Form/SoftCredit.php
 msgid "Credit to a Personal Campaign Page"
