--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 09:06+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-20 10:54+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -923,31 +923,31 @@ msgstr "Klik op deze link of plak hem in uw webbrowser"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "PCP Block"
-msgstr ""
+msgstr "PCP-blok"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Use Thermometer?"
-msgstr ""
+msgstr "Thermometer gebruiken?"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Show Honor Roll?"
-msgstr ""
+msgstr "Eerrol tonen?"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Notify Owner?"
-msgstr ""
+msgstr "Eigenaar inlichten?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "PCP Block ID"
-msgstr ""
+msgstr "PCP-block-id"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity"
-msgstr ""
+msgstr "Doelentiteit"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity ID"
-msgstr ""
+msgstr "Doelentiteit-id"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Approval Required?"
@@ -955,8 +955,8 @@ msgstr "Goedkeuring vereist?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell a Friend Enabled?"
-msgstr ""
+msgstr "Mond-tot-mond-reclame ingeschakeld?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell A Friend Limit"
-msgstr ""
+msgstr "Mond-tot-mond-reclame limiet"
