--- a/po/nl_NL/batch.po
+++ b/po/nl_NL/batch.po
@@ -6,7 +6,7 @@
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # brouwser <brouwer@ee-atwork.nl>, 2012-2013
-# HanV <han.velthuis@home.nl>, 2013,2015
+# HanV <han.velthuis@home.nl>, 2013,2015-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2012-2013,2015
 # Kevin Levie <kevin@levity.nl>, 2016
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 09:01+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-20 10:45+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -229,35 +229,35 @@ msgstr "Er zijn geen gegeveninvoerbatches gemaakt voor deze site."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Method"
-msgstr ""
+msgstr "Batch betaalmethode"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch ID"
-msgstr ""
+msgstr "EntiteitBatch-id"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch Table"
-msgstr ""
+msgstr "EntiteitBatch-tabel"
 
 #: CRM/Batch/Form/Entry.php
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple records."
-msgstr ""
+msgstr "De veldtypes bestand en automatisch-aanvullen-selecteren in het geselecteerde profiel worden niet ondersteund bij het wijzigen van meerdere records."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Click Validate & Process below when you've entered all items for the batch. "
 "You can also Save & Continue Later at any time."
-msgstr ""
+msgstr "Klik hieronder op Valideren & verwerken als u alle items voor de batch hebt ingevoerd. U kunt ook op elk moment kiezen voor Opslaan & later doorgaan."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Add, remove or change the order of columns by editing the corresponding <a "
 "href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
-msgstr ""
+msgstr "Toevoegen, verwijderen of wijzigen van de volgorde van de kolommen door het bijbehorende <a href=\"%1\" target=\"_blank\">profiel voor bulkgegevensinvoer</a> te wijzigen."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Custom fields and a Personal Campaign Page field can be added if needed."
-msgstr ""
+msgstr "Specifieke gegevens en een persoonlijke campagnepagina kunnen later worden toegevoegd."
