po: update po/nl_NL/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/financial.po
+++ b/po/nl_NL/financial.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 10:06+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-20 14:06+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -108,11 +108,11 @@ msgstr "Numerieke code"
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Entity Financial Transaction ID"
-msgstr ""
+msgstr "Entiteit financiële transactie-id"
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Financial Transaction Id"
-msgstr ""
+msgstr "Financiële transactie-id"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
@@ -171,39 +171,39 @@ msgstr "Standaard financieel account"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
-msgstr ""
+msgstr "Financiële transactie-id"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction From Account"
-msgstr ""
+msgstr "Financiële transactie van rekening"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction To Account"
-msgstr ""
+msgstr "Financiële transactie naar rekening"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Date"
-msgstr ""
+msgstr "Financiële transactiedatum"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Total Amount"
-msgstr ""
+msgstr "Financieel totaalbedrag"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Fee Amount"
-msgstr ""
+msgstr "Financieel kostenbedrag"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Net Amount"
-msgstr ""
+msgstr "Financieel nettobedrag"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Currency"
-msgstr ""
+msgstr "Financiële valuta"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Transaction Result Code"
-msgstr ""
+msgstr "Transactie-resultaatcode"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Status Id"
@@ -385,7 +385,7 @@ msgstr "Taak"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "- actions -"
-msgstr ""
+msgstr "- acties -"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -835,11 +835,11 @@ msgstr "Wijzigen"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close this batch?"
-msgstr ""
+msgstr "Weet u zeker dat u deze batch wilt afsluiten?"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close and export this batch?"
-msgstr ""
+msgstr "Weet u zeker dat u deze batch wilt afsluiten en exporteren?"
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
@@ -947,7 +947,7 @@ msgid ""
 "            Before making this change you should likely note the existing permissions at Administer > Users and Permissions > Permissions (Access Control),\n"
 "            then clicking the Access Control link for your Content Management System, then noting down the permissions for 'CiviCRM: {financial type name} view', etc.\n"
 "            Then after making the change of name, reset the permissions to the way they were."
-msgstr ""
+msgstr "Het wijzigen van de naam van het financieel type betekent dat de huidige rechten van dit type vervallen.\nBekijk daarom eerst vooraf de huidige rechten via Beheer > Gebruikers en rechten > Machtigingen (toegangsbeheer) \nklik dan op de link toegangsbeheer van het CMS, en zoek de rechten bij 'CiviCRM: {financieel type naam} view' op, enz.\n            Stel vervolgens na het wijzigen van de naam de rechten weer in zoals ze eerder waren toegekend."
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "administer CiviCRM Financial Types"
@@ -975,35 +975,35 @@ msgstr "Volledige naam valuta"
 
 #: CRM/Financial/DAO/EntityFinancialAccount.php
 msgid "Entity Financial Account ID"
-msgstr ""
+msgstr "Entiteit financiële rekening-id"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item ID"
-msgstr ""
+msgstr "Financiële item-id"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Created Date"
-msgstr ""
+msgstr "Aanmaakdatum financiële item "
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Transaction Date"
-msgstr ""
+msgstr "Transactiedatum financiële item "
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Contact ID"
-msgstr ""
+msgstr "Contact-id financiële item"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Description"
-msgstr ""
+msgstr "Beschrijving financiële item"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Currency"
-msgstr ""
+msgstr "Valuta financiële item"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Status ID"
-msgstr ""
+msgstr "Status-id financiële item"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Is Payment?"
@@ -1012,11 +1012,11 @@ msgstr "Betaling?"
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP class name implementation"
-msgstr ""
+msgstr "Achtervoegsel bij PHP-classname implementatie"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid "Financial Account Owner"
-msgstr ""
+msgstr "Financiële rekening eigenaar"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid ""
@@ -1025,12 +1025,12 @@ msgid ""
 "account. Generally, they will be from the following list: BANK, AR, OCASSET,"
 " FIXASSET, OASSET, AP, OCLIAB, LTLIAB, EQUITY, INC, COGS, EXP, EXEXP (though"
 " there may be others in your version of QuickBooks)."
-msgstr ""
+msgstr "Bij het exporteren naar QuickBooks, exporteer de rekeningenlijst en open het uitvoerbestand in een eenvoudige tekstverwerker. U ziet per rekening het codetype.  In het algemeen is het er een van de volgende lijst: BANK, AR, OCASSET, FIXASSET, OASSET, AP, OCLIAB, LTLIAB, EQUITY, INC, COGS, EXP, EXEXP (maar dat hangt af van de gebruikte versie van QuickBooks)."
 
 #: templates/CRM/Financial/Form/PaypalExpress.tpl
 #: templates/CRM/Financial/Form/PaypalPro.tpl
 msgid "Checkout securely. Pay without sharing your financial information."
-msgstr ""
+msgstr "Wees voorzichtig. Betaal zonder uw financiële informatie te delen."
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
@@ -1039,16 +1039,16 @@ msgid ""
 "href=\"%3\">premiums</a> are associated with financial accounts so that they"
 " can result in the proper double-entry transactions to export to your "
 "accounting system."
-msgstr ""
+msgstr "Financiële rekeningen komen overeen met die in uw boekhouding.  <a href=\"%1\">Financieel type</a>, <a href=\"%2\">betaalmethode</a> en <a href=\"%3\">relatiegeschenken</a> zijn gekoppeld met financiële rekeningen zodat ze leiden tot dubbel boekhouden transacties die u kunt exporteren naar uw boekhouding."
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
 "If you specify a payment method then this batch will be limited to exporting"
 " only transactions paid with that method."
-msgstr ""
+msgstr "Als u een een betaalmethode specificeert, dan worden er in de batch alleen transacties geëxporteerd die de gespecificeerde betaalmethode gebruiken."
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
 "Note that not all transactions are necessarily associated with a payment "
 "method."
-msgstr ""
+msgstr "NB: niet alle transacties hoeven een betaalmethode te hebben."
