po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 09:52+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-20 11:32+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4976,11 +4976,11 @@ msgstr "Bijdragetype"
 
 #: CRM/Contribute/ActionMapping/ByType.php
 msgid "Soft Credit Role"
-msgstr ""
+msgstr "Rol zacht krediet"
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "Payment failed at payment processor"
-msgstr ""
+msgstr "De betaling is niet verwerkt"
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "Recurring contribution"
@@ -5000,23 +5000,23 @@ msgstr "Periodieke bijdragen met tenminste één betaling"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "All recurring contributions regardless of payments"
-msgstr ""
+msgstr "Alle periodieke bijdragen ongeacht de betalingen"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Contribution Product ID"
-msgstr ""
+msgstr "Bijdrage product-id"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Start date for premium"
-msgstr ""
+msgstr "Begindatum relatiegeschenk"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "End date for premium"
-msgstr ""
+msgstr "Einddatum relatiegeschenk"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Premium comment"
-msgstr ""
+msgstr "Toelichting relatiegeschenk"
 
 #: CRM/Contribute/DAO/PremiumsProduct.php
 msgid "Premium Product ID"
@@ -5064,11 +5064,11 @@ msgstr "Hoofdkleur"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Backgroup Color"
-msgstr ""
+msgstr "Achtergrondkleur"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Other Backgroun Colour"
-msgstr ""
+msgstr "Andere achtergrondkleur"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "About Link Colour"
@@ -5080,7 +5080,7 @@ msgstr "Kleur startpagina-link"
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Payment Processor Error message :"
-msgstr ""
+msgstr "Foutmelding betalingsmethode:"
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Online Contribution:"
@@ -5090,20 +5090,20 @@ msgstr "Online bijdrage:"
 msgid ""
 "This page does not have any price fields configured or you may not have "
 "permission for them. Please contact the site administrator for more details."
-msgstr ""
+msgstr "Er zijn voor deze pagina geen prijsvelden ingesteld of u heeft er geen toegang tot. Neem a.u.b. contact op met de beheerder."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "You cannot have auto-renewal on if you are paying later."
-msgstr ""
+msgstr "U kunt bij later betalen niet automatisch verlengen."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Transaction ID for the refund payment"
-msgstr ""
+msgstr "Transactie-id van de terugbetaling"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid ""
 "Contribution submitted by a staff person using contributor's credit card"
-msgstr ""
+msgstr "Bijdragen gedaan door een staflid met gebruik van de creditcard van de contibuant"
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Invalid Membership"
@@ -5126,7 +5126,7 @@ msgstr "Bijwerken van meerdere bijdragen"
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple contributions."
-msgstr ""
+msgstr "De veldtypes bestand en automatisch-aanvullen-selecteren in het geselecteerde profiel worden niet ondersteund bij het wijzigen van meerdere bijdragen. "
 
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "1 contribution could not be deleted."
@@ -5142,18 +5142,18 @@ msgstr[1] "%count bijdragen zullen niet worden verwijderd."
 
 #: CRM/Contribute/Form/Task/PDF.php
 msgid "Override privacy setting? (Do not email / Do not mail)"
-msgstr ""
+msgstr "De privacy-instellingen negeren? (Niet mailen en Geen post)"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Contact and Payment Method"
-msgstr ""
+msgstr "Contact en betaalmethode"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 msgid ""
 "The maximum number of contributions you can select for Update multiple "
 "contributions is %1. You have selected %2. Please select fewer contributions"
 " from your search results and try again."
-msgstr ""
+msgstr "Het maximale aantal bijdragen dat u tegelijk kunt wijzigen is %1. U heeft er %2 geselecteerd. Probeer het opnieuw met wat minder bijdragen."
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 msgid ""
@@ -5162,22 +5162,22 @@ msgid ""
 "CiviCRM > Customize Data and Screens > CiviCRM Profile to configure a "
 "Profile. Consult the online Administrator documentation for more "
 "information."
-msgstr ""
+msgstr "U moet een profiel aanmaken met daarin de %1 velden die u wilt bewerken voordat u meerdere bijdragen in een keer kunt wijzigen. Navigeer naar Beheer > Aanpassen Gegevens en Schermen > CiviCRM Profiel om een profiel te configureren. Lees de online beheerders documentatie voor meer informatie."
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid ""
 "Payment Method should be Check when a check number is entered for a "
 "contribution."
-msgstr ""
+msgstr "De betaalmethode moet cheque zijn als er bij een bijdrage een chequenummer wordt ingevuld."
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid ""
 "There is no valid processor for this subscription so it cannot be edited."
-msgstr ""
+msgstr "Er is hierbij geen geldige methode, daarom kan het niet worden gewijzigd."
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Recurring Contribution Updated - increased installment amount"
-msgstr ""
+msgstr "Periodieke bijdrage gewijzigd - aantal termijnen verhoogd"
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Recurring Contribution Updated - decreased installment amount"
@@ -5189,7 +5189,7 @@ msgstr "Bijdragen exporteren"
 
 #: CRM/Contribute/Task.php
 msgid "Update pending contribution status"
-msgstr ""
+msgstr "Wijzig lopende bijdrage-status"
 
 #: CRM/Contribute/Task.php
 msgid "Receipts - print or email"
@@ -5205,21 +5205,21 @@ msgstr "Facturen - afdrukken of e-mailen"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "No payments found for this %1 record"
-msgstr ""
+msgstr "Bij dit %1 record zijn er geen betalingen gevonden"
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
 "Use this form to submit a new contribution on behalf of %1. <strong>A\n"
 "        %2 transaction will be submitted</strong> using the selected payment processor."
-msgstr ""
+msgstr "Gebruik dit formulier om een nieuwe bijdrage van %1 in te voeren. De <strong>%2 transactie zal worden verwerkt</strong> door de geselecteerde betaalmethode."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid "Contributor Profiles"
-msgstr ""
+msgstr "Gever profielen"
 
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Refund Transaction ID"
-msgstr ""
+msgstr "Terugbetaling transactie-id"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "New Payment Method"
@@ -5235,11 +5235,11 @@ msgstr "Betaalmethode verwijderen"
 
 #: templates/CRM/Contribute/Form/Selector.tpl
 msgid "Click arrow to view payment details."
-msgstr ""
+msgstr "Klik op de pijl om de betalingsdetails te bekijken."
 
 #: templates/CRM/Contribute/Page/ContributionSoft.tpl
 msgid "Total Cancelled Soft Credits"
-msgstr ""
+msgstr "Totaal geannuleerde zachte kredieten"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "# Completed"
@@ -5253,7 +5253,7 @@ msgstr "Gem."
 msgid ""
 "Note: if the correct payment method is not listed here (e.g. for in-kind "
 "donations) ask your administrator to add a new option to this list."
-msgstr ""
+msgstr "NB: Indien de goede betaalmethode hier ontbreekt (bijv. in-natura bijdrage) vraag dan aan de beheerder om deze optie toe te voegen."
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "INVOICE"
@@ -5297,23 +5297,23 @@ msgstr "TOTAAL %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "LESS Amount Credited"
-msgstr ""
+msgstr "Minder creditbedrag"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "LESS Amount Paid"
-msgstr ""
+msgstr "Minder betaald bedrag"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "AMOUNT DUE:"
-msgstr ""
+msgstr "Vervalbedrag:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "DUE DATE: %1"
-msgstr ""
+msgstr "Vervaldatum: %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "PAYMENT ADVICE"
-msgstr ""
+msgstr "Betaaladvies"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "To: "
@@ -5349,21 +5349,21 @@ msgstr "Creditfactuurnummer:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "LESS Credit to invoice(s)"
-msgstr ""
+msgstr "Minder credit naar factuur/facturen"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "REMAINING CREDIT"
-msgstr ""
+msgstr "Resterend credit"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "CREDIT ADVICE"
-msgstr ""
+msgstr "Creditadvies"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid ""
 "Please do not pay on this advice. Deduct the amount of this Credit Note from"
 " your next payment to us"
-msgstr ""
+msgstr "Doe nu geen betaling. Breng het bedrag van deze creditnota in mindering op uw volgende betaling aan ons"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Customer:"
