--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 09:55+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-20 07:07+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2218,11 +2218,11 @@ msgstr "Toont statistieken van activiteiten per type of datum"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "Detail toezegging"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Lijst van de toezeggingen inclusief onder meer  het toegezegde bedrag,  de status, de volgende betalingsdatum."
