--- a/po/es_ES/campaign.po
+++ b/po/es_ES/campaign.po
@@ -12,7 +12,8 @@
 # Harv Cruzz <hc@sediceweb.co>, 2015
 # ixiam <info@ixiam.com>, 2013
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2016
 # olgaberrios <olgaberrios@masticable.org>, 2012
 # olgaberrios <olgaberrios@masticable.org>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -23,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-20 11:36+0000\n"
+"Last-Translator: Marti Prat <m.prat@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -795,7 +796,7 @@ msgstr "Campos de la petición."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Click here for new profile"
-msgstr ""
+msgstr "Clique aquí para un nuevo perfil"
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "This title will be displayed at the top of the thank-you page."
