--- a/po/nl_NL/pledge.po
+++ b/po/nl_NL/pledge.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 09:00+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-20 06:58+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -663,7 +663,7 @@ msgstr "Er van dit contact geen toezeggingen vastgelegd."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "Contributions made in honor of %1"
-msgstr ""
+msgstr "Bijdragen gedaan ter ere van %1"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -791,11 +791,11 @@ msgstr "Toezegging betaalherinnering"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement Sent"
-msgstr ""
+msgstr "Bevestiging toezegging verzonden"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement  Not Sent"
-msgstr ""
+msgstr "Bevestiging toezegging niet verzonden"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Acknowledgement sent?"
@@ -811,11 +811,11 @@ msgstr "Voer een getal in."
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Pledge Block ID"
-msgstr ""
+msgstr "Toezegging blok-id"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Expose Frequency Interval?"
-msgstr ""
+msgstr "Frequentie-interval weergeven?"
 
 #: CRM/Pledge/Task.php
 msgid "Export pledges"
